<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="Search For"
        android:textColor="@color/text_blue"
        android:textSize="40sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp" />

    <EditText
        android:id="@+id/search_text"
        android:hint="请输入相应植物的名称"
        android:textColorHint="@color/text_blue"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/text_blue"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/search_button"
        android:text="GO!"
        android:textColor="@color/text_blue"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        android:padding="5dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/image_border"/>

</LinearLayout>