...
            android:drawableTop="@drawable/tab_menu_map"
            android:gravity="center"
            android:textColor="@drawable/tab_menu_map_text"
            android:text="地图"/>

        <TextView
            android:id="@+id/txt_find"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/tab_menu_find"
...
